bases/hypershell/ingress-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hypershell-api
  namespace: hypershell
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.hypershell.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hypershell-api-server
            port:
              name: http
